added video-directory fixed pssst and utility filter

--- a/services/pssst/public/css/pssst-client.css
+++ b/services/pssst/public/css/pssst-client.css
@@ -12,3 +12,9 @@ html { font-size: 1rem; }
 @media (min-width: 1200px) {
     html, a, b { font-size: 1.25rem; }
 }
+
+.error-msg {
+  font-size: 16px;
+  color:
+  red;
+}
