--- a/services/pssst/public/css/pssst-client.css
+++ b/services/pssst/public/css/pssst-client.css
@@ -1,4 +1,7 @@
-html { font-size: 1rem; }
+html {
+  font-size: 1rem;
+  scroll-behavior: smooth;
+}
 
 @media (min-width: 576px) {
     html, a, b { font-size: 2rem; }
