--- a/public/styles/planks.css
+++ b/public/styles/planks.css
@@ -7,6 +7,37 @@
   z-index: 10;
 }
 
+#three-d-model.small {
+  width: 25vw;
+  height: 25vh;
+}
+
+#three-d-model.large {
+  width: 100vw;
+  height: 100vh;
+}
+
+#add-cabinet-cnt.large {
+  width: 75vw;
+  height: 100vh;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+}
+
+.three-d-model-cnt {
+  position: relative;
+}
+
+#three-d-model > #max-min-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+
 .hidden {
   display: none;
 }
