--- a/services/cabinet/public/html/templates/model-controller.html
+++ b/services/cabinet/public/html/templates/model-controller.html
@@ -23,7 +23,7 @@
                 {{!tdm.hidePartCode(part.partCode) ? 'checked' : ''}}>
           </div:t>
         </div:t>
-        <div:t repeat='label, group in group.groups' $t-id='./public/html/planks/model-controller.html'></div:t>
+        <div:t repeat='label, group in group.groups' $t-id='model-controller'></div:t>
       </div>
     </div>
   </div>
