--- a/services/cabinet/public/html/templates/login/create-account.html
+++ b/services/cabinet/public/html/templates/login/create-account.html
@@ -1,9 +1,9 @@
 <h3>Create An Account</h3>
-<input type='text' placeholder="email" name='email'>
-<input type='text' placeholder="password" name='password'>
+<input type='text' placeholder="email" name='email' value='{{email}}'>
+<input type='password' placeholder="password" name='password' value='{{password}}'>
 <br><br>
-<button>Login</button>
+<button id='register'>Register</button>
 <br><br>
-<a href='#'>Reset Passord</a>
+<a href='#' user-state='RESET_PASSWORD'>Reset Passord</a>
 |
-<a href='#'>Login</a>
+<a href='#' user-state='LOGIN'>Login</a>
