--- a/services/cabinet/public/html/templates/login/login.html
+++ b/services/cabinet/public/html/templates/login/login.html
@@ -1,9 +1,9 @@
 <h3>Login</h3>
-<input type='text' placeholder="email" name='email'>
-<input type='text' placeholder="password" name='password'>
+<input type='text' placeholder="email" name='email' value='{{email}}'>
+<input type='password' placeholder="password" name='password' value='{{password}}'>
 <br><br>
-<button>Login</button>
+<button id='login-btn'>Login</button>
 <br><br>
-<a href='#'>Reset Passord</a>
+<a href='#' user-state='RESET_PASSWORD'>Reset Passord</a>
 |
-<a href='#'>Create An Account</a>
+<a href='#' user-state='CREATE_ACCOUNT'>Create An Account</a>
