--- a/services/cabinet/public/html/templates/login/reset-password.html
+++ b/services/cabinet/public/html/templates/login/reset-password.html
@@ -1,8 +1,9 @@
 <h3>Reset Password</h3>
-<input type='text' placeholder="email" name='email'>
+<input type='text' placeholder="email" name='email' value='{{email}}'>
+<input type='password' placeholder="password" name='password' value='{{password}}'>
 <br><br>
-<button>Reset</button>
+<button id='reset-password'>Reset</button>
 <br><br>
-<a href='#'>Login</a>
+<a href='#' user-state='LOGIN'>Login</a>
 |
-<a href='#'>Create An Account</a>
+<a href='#' user-state='CREATE_ACCOUNT'>Create An Account</a>
