--- a/services/cabinet/public/html/templates/cabinet/body.html
+++ b/services/cabinet/public/html/templates/cabinet/body.html
@@ -6,6 +6,7 @@
         <option:t repeat='showType in showTypes'>{{showType.name}}</option:t>
       </select>
     </div>
+    <button class='save-cabinet-btn' index='{{$index}}'>Save</button>
     <div class='right'>
       <select class="show-right-select">
         <option:t repeat='showType in showTypes'>{{showType.name}}</option:t>
