--- a/services/cabinet/public/html/templates/divider-controls.html
+++ b/services/cabinet/public/html/templates/divider-controls.html
@@ -8,12 +8,12 @@
     <label for='open-orientation-horiz-{{opening.uniqueId}}'>Horizontal:</label>
     <input type='radio' name='orientation-{{opening.uniqueId}}' value='horizontal'
         open-id='{{opening.uniqueId}}' id='open-orientation-horiz-{{opening.uniqueId}}'
-        class='open-orientation-radio' {{opening.vertical ? '' : 'checked'}}>
+        class='open-orientation-radio' {{opening.value('vertical') ? '' : 'checked'}}>
 
     <label for='open-orientation-vert-{{opening.uniqueId}}'>Vertical:</label>
     <input type='radio' name='orientation-{{opening.uniqueId}}' value='vertical'
         open-id='{{opening.uniqueId}}' id='open-orientation-vert-{{opening.uniqueId}}'
-        class='open-orientation-radio' {{opening.vertical ? 'checked' : ''}}>
+        class='open-orientation-radio' {{opening.value('vertical') ? 'checked' : ''}}>
 
   </span>
   <select class='open-pattern-select {{ opening.dividerCount() > 0 ? '' : 'hidden'}}'
