base cabinets configurations are saved and rendered properly, dividers are mostly working the center is off in the z direction for some reason

--- a/services/cabinet/public/html/templates/cabinet/body.html
+++ b/services/cabinet/public/html/templates/cabinet/body.html
@@ -15,5 +15,7 @@
     </div>
   </div>
   <br>
-  <div>{{OpenSectionDisplay.html(cabinet.opening)}}</div>
+  <div:t repeat='opening in cabinet.openings' class='divison-section-cnt'>
+    {{OpenSectionDisplay.html(opening)}}
+  </div:t>
 </div>
