added cost manager interface to cabinets

--- a/services/cabinet/public/html/templates/expandable/pill.html
+++ b/services/cabinet/public/html/templates/expandable/pill.html
@@ -11,14 +11,21 @@
         </div>
       </div>
     </div:t>
-    <button ex-list-id='{{id}}' class='expandable-list-add-btn'
-    {{hideAddBtn ? 'hidden' : ''}}>
-    Add {{listElemLable}}
-  </button>
   </div>
   <div>
+    <span:t repeat='input in inputs'>
+      <input list='auto-fill-list-{{input.id}}' id='{{input.id}}'
+          placeholder='{{input.placeholder}}' type='text'>
+      <datalist id="auto-fill-list-{{input.id}}">
+        <option:t value="{{option}}" repeat='option in input.autofill'></option:t>
+      </datalist>
+    </span:t>
+    <button ex-list-id='{{id}}' class='expandable-list-add-btn'
+        {{hideAddBtn ? 'hidden' : ''}}>
+      Add {{listElemLable}}
+    </button>
+    <br>
+    <div class='error' id='{{ERROR_CNT_ID}}'></div>
   </div>
-  <div class="expand-body {{type}}">
-    Hello World!
-  </div>
+  <div class="expand-body {{type}}"></div>
 </div>
