--- a/services/cabinet/public/html/templates/order/body.html
+++ b/services/cabinet/public/html/templates/order/body.html
@@ -1,7 +1,5 @@
 <div>
-  <label>Order Name</label>
-  <input class='order-name-input' type='text'
-      value='{{order.name}}' index='{{$index}}'>
+  <b>{{order.name}}</b>
   <button class='save-order-btn' index='{{$index}}'>Save</button>
   <div id='room-pills'></div>
 </div>
