--- a/services/cabinet/public/html/templates/expandable/list.html
+++ b/services/cabinet/public/html/templates/expandable/list.html
@@ -12,13 +12,17 @@
     </div>
   </div:t>
   <div>
-    <input list='auto-fill-list' id='{{INPUT_ID}}' type='text' {{input ? '' : 'hidden'}}>
-    <datalist id="auto-fill-list">
-      <option:t value="{{option}}" repeat='option in inputOptions'></option:t>
-    </datalist>
+    <span:t repeat='input in inputs'>
+      <input list='auto-fill-list-{{input.id}}' id='{{input.id}}'
+          placeholder='{{input.placeholder}}' type='text'>
+      <datalist id="auto-fill-list-{{input.id}}">
+        <option:t value="{{option}}" repeat='option in input.autofill'></option:t>
+      </datalist>
+    </span:t>
     <button ex-list-id='{{id}}' class='expandable-list-add-btn'
           {{hideAddBtn ? 'hidden' : ''}}>
       Add {{listElemLable}}
     </button>
   </div>
+  <div class='error' id='{{ERROR_CNT_ID}}'></div>
 </div>
