--- a/services/cabinet/public/styles/estimate.css
+++ b/services/cabinet/public/styles/estimate.css
@@ -15,6 +15,11 @@
   margin: 2pt;
 }
 
+.save-order-btn {
+  float: right;
+  margin: 10pt;
+}
+
 .property-container {
   height: 20vh;
   overflow: scroll;
