fixed DecisionTree && added menu to cabinet

--- a/services/cabinet/public/html/templates/input/decision/decision.html
+++ b/services/cabinet/public/html/templates/input/decision/decision.html
@@ -1,7 +1,8 @@
 
-<span id='{{id}}' class='{{scope.constructor.class}}' node-id={{_nodeId}}>
-  <div:t repeat='input in inputArray'>
+<span id='{{id}}'>
+  <div:t repeat='input in inputArray'  class='{{class}}'
+        node-id='{{_nodeId}}' index='{{$index}}'>
     {{input.html()}}
-    <div id='{{childCntId}}'></div>
+    <div id='{{input.childCntId}}'></div>
   </div:t>
 <span>
