--- a/services/cabinet/public/html/templates/input/input.html
+++ b/services/cabinet/public/html/templates/input/input.html
@@ -1,6 +1,6 @@
 <div>
   <input class='{{class}}' list='input-list-{{id}}' id='{{id}}'
-      placeholder='{{placeholder}}' type='{{type}}'>
+      placeholder='{{placeholder}}' type='{{type}}' name='{{name}}'>
   <datalist id="input-list-{{id}}">
     <option:t value="{{item}}" repeat='item in list'></option:t>
   </datalist>
