managed to get decision tree visually functioning need to integrate button and submission with cost manager... also modified str-math-eval to parce and read feet and inch notation

--- a/services/cabinet/public/html/templates/expandable/list.html
+++ b/services/cabinet/public/html/templates/expandable/list.html
@@ -12,6 +12,7 @@
     </div>
   </div:t>
   <div>
+    <div id='input-tree-cnt'>{{inputTree ? inputTree.html() : ''}}</div>
     <span:t repeat='input in inputs'>
       <input list='auto-fill-list-{{input.id}}' id='{{input.id}}'
           placeholder='{{input.placeholder}}' type='text'>
