--- a/services/cabinet/public/html/templates/input/decision/decisionTree.html
+++ b/services/cabinet/public/html/templates/input/decision/decisionTree.html
@@ -1,4 +1,3 @@
 <div class='{{class}}' tree-id='{{treeId}}'>
-  {{html()}}
-  <button id='{{buttonId}}'>Submit</button>
+  {{payload.html()}}
 </div>
