--- a/services/cabinet/public/html/templates/input/select.html
+++ b/services/cabinet/public/html/templates/input/select.html
@@ -1,6 +1,9 @@
 <div>
-  <select class='{{class}}' id='{{id}}' name='{{name}}'>
-    <option:t repeat='key, value in list' value='{{value}}'>{{key}}</option:t>
+  <select class='{{class}}' id='{{id}}' name='{{name}}' value='{{value}}'>
+    <option:t repeat='item in list' value='{{item}}'
+        {{value === item ? 'selected' : ''}}>
+      {{item}}
+    </option:t>
   </select>
   <div class='error' id='{{errorMsgId}}'>{{errorMsg}}</div>
 </div>
