--- a/services/cabinet/public/html/templates/input/decision/decisionTree.html
+++ b/services/cabinet/public/html/templates/input/decision/decisionTree.html
@@ -1,3 +1,4 @@
 <div class='{{class}}' tree-id='{{treeId}}'>
   {{payload.html()}}
+  <button class='{{buttonClass}}' disabled tree-id='{{treeId}}'>{{name}}</button>
 </div>
