--- a/services/cabinet/public/html/templates/expandable/pill.html
+++ b/services/cabinet/public/html/templates/expandable/pill.html
@@ -13,17 +13,20 @@
     </div:t>
   </div>
   <div>
-    <span:t repeat='input in inputs'>
-      <input list='auto-fill-list-{{input.id}}' id='{{input.id}}'
-          placeholder='{{input.placeholder}}' type='text'>
-      <datalist id="auto-fill-list-{{input.id}}">
-        <option:t value="{{option}}" repeat='option in input.autofill'></option:t>
-      </datalist>
-    </span:t>
-    <button ex-list-id='{{id}}' class='expandable-list-add-btn'
-        {{hideAddBtn ? 'hidden' : ''}}>
-      Add {{listElemLable}}
-    </button>
+    <div id='input-tree-cnt'>{{inputTree ? inputTree.html() : ''}}</div>
+    <div  {{!hasInputTree() ? '' : 'hidden'}}>
+      <span:t repeat='input in inputs'>
+        <input list='auto-fill-list-{{input.id}}' id='{{input.id}}'
+            placeholder='{{input.placeholder}}' type='text'>
+        <datalist id="auto-fill-list-{{input.id}}">
+          <option:t value="{{option}}" repeat='option in input.autofill'></option:t>
+        </datalist>
+      </span:t>
+      <button ex-list-id='{{id}}' class='expandable-list-add-btn'
+          {{hideAddBtn ? 'hidden' : ''}}>
+        Add {{listElemLable}}
+      </button>
+    </div>
     <br>
     <div class='error' id='{{ERROR_CNT_ID}}'></div>
   </div>
