--- a/services/cabinet/public/html/templates/expandable/sidebar.html
+++ b/services/cabinet/public/html/templates/expandable/sidebar.html
@@ -12,19 +12,22 @@
         </div>
       </div>
     </div:t>
-    <div:t repeat='input in inputs'>
-      <input class='expand-list-sidebar-input'
-          list='auto-fill-list-{{input.id}}' id='{{input.id}}'
-          placeholder='{{input.placeholder}}' type='text'>
-      <datalist id="auto-fill-list-{{input.id}}">
-        <option:t value="{{option}}" repeat='option in input.autofill'></option:t>
-      </datalist>
-    </div:t>
-    <button ex-list-id='{{id}}' class='expandable-list-add-btn'
-        {{hideAddBtn ? 'hidden' : ''}}>
-      Add {{listElemLable}}
-    </button>
-    <div class='error' id='{{ERROR_CNT_ID}}'></div>
+    <div id='input-tree-cnt'>{{inputTree ? inputTree.html() : ''}}</div>
+    <div {{!hasInputTree() ? '' : 'hidden'}}>
+      <div:t repeat='input in inputs'>
+        <input class='expand-list-sidebar-input'
+            list='auto-fill-list-{{input.id}}' id='{{input.id}}'
+            placeholder='{{input.placeholder}}' type='text'>
+        <datalist id="auto-fill-list-{{input.id}}">
+          <option:t value="{{option}}" repeat='option in input.autofill'></option:t>
+        </datalist>
+      </div:t>
+      <button ex-list-id='{{id}}' class='expandable-list-add-btn'
+          {{hideAddBtn ? 'hidden' : ''}}>
+        Add {{listElemLable}}
+      </button>
+      <div class='error' id='{{ERROR_CNT_ID}}'></div>
+    </div>
   </div>
   <div>
   </div>
