--- a/services/cabinet/public/html/templates/divider-controls.html
+++ b/services/cabinet/public/html/templates/divider-controls.html
@@ -16,13 +16,9 @@
         class='open-orientation-radio' {{opening.value('vertical') ? 'checked' : ''}}>
 
   </span>
-  <select class='open-pattern-select {{ opening.dividerCount() > 0 ? '' : 'hidden'}}'
-        id='{{selectPatternId}}' prop-update='pattern' divisions={{opening.dividerCount()}}>
-    {{patterns}}
-  </select>
-  <span:t class='input-html-cnt-{{opening.uniqueId}}' repeat='label in pattern.inputArr'>
-    <label>{{label}}</label>
-    <input class='division-pattern-input' name='{{pattern.name}}' index='{{$index}}'
-        value='{{fill ? fill[$index] : ""}}'>
-  </span:t>
+  <span>
+    <input type='text' name='pattern' opening-id='{{opening.uniqueId}}' value='{{opening.pattern().str}}'>
+    <div class='open-pattern-input-cnt' opening-id='{{opening.uniqueId}}'>
+      {{patternInputHtml}}
+    </div>
 </div>
