fixed the bugs with division pattern

--- a/services/cabinet/public/html/templates/input/measurement.html
+++ b/services/cabinet/public/html/templates/input/measurement.html
@@ -1,6 +1,6 @@
 <div class='fit'>
   <label>{{label}}</label>
-  <input class='measurement-input {{class}}' id='{{id}}'
+  <input class='measurement-input {{class}}' id='{{id}}' value='{{value() ? value() : ""}}'
       placeholder='{{placeholder}}' type='{{type}}' name='{{name}}'>
   <div class='error' id='{{errorMsgId}}'>{{errorMsg}}</div>
 </div>
