--- a/services/cabinet/public/html/templates/divider-controls.html
+++ b/services/cabinet/public/html/templates/divider-controls.html
@@ -17,7 +17,8 @@
 
   </span>
   <span>
-    <input type='text' name='pattern' opening-id='{{opening.uniqueId}}' value='{{opening.pattern().str}}'>
+    <input class='division-pattern-input' type='text' name='pattern'
+        opening-id='{{opening.uniqueId}}' value='{{opening.pattern().str}}'>
     <div class='open-pattern-input-cnt' opening-id='{{opening.uniqueId}}'>
       {{patternInputHtml}}
     </div>
