fixed and updated cabinet saving functionallity

--- a/services/cabinet/public/html/templates/cabinet/head.html
+++ b/services/cabinet/public/html/templates/cabinet/head.html
@@ -1,6 +1,6 @@
 <div class='cabinet-header'>
-  <input class='cabinet-id-input' prop-update='{{$index}}.id'
-        index='{{$index}}' room-id='{{room.id}}' value='{{cabinet.id || $index}}'>
+  <input class='cabinet-id-input' prop-update='{{$index}}.name'
+        index='{{$index}}' room-id='{{room.id}}' value='{{cabinet.name || $index}}'>
   Size:
   <div class='cabinet-dem-cnt'>
     <label>W:</label>
