--- a/services/cabinet/public/html/templates/managers/cost/body.html
+++ b/services/cabinet/public/html/templates/managers/cost/body.html
@@ -1,17 +1,3 @@
 <div>
-  <span>
-    <input value='{{instance.length()}}'>
-  </span>
-  <span>
-    <label>X</label>
-    <input value='{{instance.width()}}'>
-  </span>
-  <span>
-    <label>X</label>
-    <input value='{{instance.depth()}}'>
-  </span>
-  <label>Cost</label>
-  <input value='{{instance.cost()}}'>
-  <br>
-  <label>Per {{instance.unitCost().name}} = {{instance.unitCost().value}}
+  {{instance.partId}}
 </div>
