--- a/services/cabinet/public/html/templates/input/select.html
+++ b/services/cabinet/public/html/templates/input/select.html
@@ -1,7 +1,7 @@
 <div>
-  <select class='{{class}}' id='{{id}}' name='{{name}}' value='{{value}}'>
+  <select class='{{class}}' id='{{id}}' name='{{name}}' value='{{value()}}'>
     <option:t repeat='item in list' value='{{item}}'
-        {{value === item ? 'selected' : ''}}>
+        {{selected(item) ? 'selected' : ''}}>
       {{item}}
     </option:t>
   </select>
