repaired add cabinet interface, split cost manager to apply to individual parts

--- a/services/cabinet/public/html/templates/input/select.html
+++ b/services/cabinet/public/html/templates/input/select.html
@@ -1,4 +1,5 @@
 <div>
+  <label>{{label}}</label>
   <select class='{{class}}' id='{{id}}' name='{{name}}' value='{{value()}}'>
     <option:t repeat='item in list' value='{{item}}'
         {{selected(item) ? 'selected' : ''}}>
