working on cost manager

--- a/services/cabinet/public/html/templates/input/input.html
+++ b/services/cabinet/public/html/templates/input/input.html
@@ -1,4 +1,4 @@
-<div>
+<div{{hide ? ' hidden' : ''}}>
   <label>{{label}}</label>
   <input class='{{class}}' list='input-list-{{id}}' id='{{id}}'
       placeholder='{{placeholder}}' type='{{type}}' name='{{name}}'>
