--- a/services/cabinet/public/html/templates/managers/cost/body.html
+++ b/services/cabinet/public/html/templates/managers/cost/body.html
@@ -1,1 +1,4 @@
-<div>{{instance.expandList.html()}}</div>
+<div class='{{instance.cntClass}}' >
+  <div id='{{instance.parentId}}'>{{instance.expandList.html()}}</div>
+  <div hidden>hi</div>
+</div>
