--- a/services/cabinet/public/html/templates/managers/cost/cost-head.html
+++ b/services/cabinet/public/html/templates/managers/cost/cost-head.html
@@ -1,3 +1,1 @@
-<div>
-  <b>{{instance.id()}} - {{instance.constructor.name}} ({{instance.method()}})</b>
-</div>
+<b>{{id()}} - {{constructor.name}} ({{method()}})</b>
