refined cost input tree, need to review changes

--- a/services/cabinet/public/html/templates/managers/cost/cost-head.html
+++ b/services/cabinet/public/html/templates/managers/cost/cost-head.html
@@ -1,1 +1,4 @@
-<b>{{id()}} - {{constructor.name}} ({{method()}})</b>
+<b>
+  {{id()}} - {{constructor.constructorId(constructor.name)}}
+  <b{{method() ? '' : ' hidden'}}>({{method()}})</b>
+</b>
