--- a/services/cabinet/public/html/templates/managers/cost/cost-body.html
+++ b/services/cabinet/public/html/templates/managers/cost/cost-body.html
@@ -1,18 +1,30 @@
 <div>
-  <span>
-    <input value='{{cost.length()}}'>
-  </span>
-  <span>
-    <label>X</label>
-    <input value='{{cost.width()}}'>
-  </span>
-  <span>
-    <label>X</label>
-    <input value='{{cost.depth()}}'>
-  </span>
-  <label>Cost</label>
-  <input value='{{cost.cost()}}'>
-  <br>
-  <label>Per {{cost.unitCost('name')}} = {{cost.unitCost('value')}}</label>
-  <div id='{{parentId}}'>{{expandList.html()}}</div>
+  <div{{cost.constructor.name === 'Labor' || cost.constructor.name === 'Material' ? '' : ' hidden'}}>
+    <span{{cost.length() === undefined ? ' hidden' : ''}}>
+      <input value='{{cost.length()}}'>
+    </span>
+    <span{{cost.width() === undefined ? ' hidden' : ''}}>
+      <label>X</label>
+      <input value='{{cost.width()}}'>
+    </span>
+    <span{{cost.depth() === undefined ? ' hidden' : ''}}>
+      <label>X</label>
+      <input value='{{cost.depth()}}'>
+    </span>
+
+    <br>
+    <div>
+      <label>Cost</label>
+      <input value='{{cost.cost()}}'>
+      <label>Per {{cost.unitCost('name')}} = {{cost.unitCost('value')}}</label>
+    </div>
+  </div>
+  <div{{cost.constructor.name === 'SelectCost' || cost.constructor.name === 'Category' ? '' : ' hidden'}}>
+    <div{{cost.constructor.name === 'SelectCost' ? '' : ' hidden'}}>
+      <label>Selected</label>
+      <input type='number'
+        value='{{cost.constructor.name === 'SelectCost' ? cost.selected() : '-1'}}'>
+    </div>
+    <div id='{{parentId}}'>{{expandList.html()}}</div>
+  </div>
 </div>
