--- a/services/cabinet/public/html/templates/order/body.html
+++ b/services/cabinet/public/html/templates/order/body.html
@@ -1,5 +1,4 @@
 <div>
   <b>{{order.name}}</b>
-  <button class='save-order-btn' index='{{$index}}'>Save</button>
-  <div id='room-pills'></div>
+  <div id='order-nav'></div>
 </div>
