--- a/services/cabinet/public/html/templates/order/builder/body.html
+++ b/services/cabinet/public/html/templates/order/builder/body.html
@@ -1,5 +1,5 @@
 <div>
   <b>{{order.name}}</b>
   <button class='save-order-btn' index='{{$index}}'>Save</button>
-  <div id='room-pills'></div>
+  <div id='room-pills'>RoomPills!</div>
 </div>
