--- a/services/cabinet/public/styles/expandable-list.css
+++ b/services/cabinet/public/styles/expandable-list.css
@@ -39,6 +39,21 @@
   display: none;
 }
 
+.toggle-display-item {
+  padding: 5pt 20pt;
+  background-color: darkgray;
+  border-radius: 10pt;
+  display: inline-block;
+  border-radius: 10pt 10pt 0pt 0pt;
+}
+
+.toggle-display-item.active {
+  background-color: blue;
+  color: white;
+  font-weight: bolder;
+  border-radius: 10pt 10pt 0pt 0pt;
+}
+
 .expand-header {
   padding: 5pt 20pt;
   background-color: darkgray;
