--- a/services/cabinet/public/html/templates/input/input.html
+++ b/services/cabinet/public/html/templates/input/input.html
@@ -1,7 +1,8 @@
 <div{{hide ? ' hidden' : ''}}>
   <label>{{label}}</label>
   <input class='{{class}}' list='input-list-{{id}}' id='{{id}}'
-      placeholder='{{placeholder}}' type='{{type}}' name='{{name}}'>
+      placeholder='{{placeholder}}' type='{{type}}' name='{{name}}'
+      {{attrString()}}>
   <datalist id="input-list-{{id}}">
     <option:t value="{{item}}" repeat='item in list'></option:t>
   </datalist>
