--- a/services/cabinet/public/html/templates/managers/abstract-manager.html
+++ b/services/cabinet/public/html/templates/managers/abstract-manager.html
@@ -2,7 +2,7 @@
   <div class="center">
     <h2 id='{{headerId}}'>
       {{header}}
-      <button id='{{saveBtnId}}'>Save</button>
+      <button class='manager-save-btn' id='{{saveBtnId}}'>Save</button>
     </h2>
   </div>
   <div id="{{bodyId}}"></div>
