--- a/services/cabinet/public/html/templates/order/body.html
+++ b/services/cabinet/public/html/templates/order/body.html
@@ -12,7 +12,7 @@
     <div id='room-pills'>RoomPills!</div>
   </div>
   <div id='information-display-{{$index}}' hidden>
-    <utility-filter id='uf-info-{{$index}}'>
+    <utility-filter id='uf-info-{{$index}}' edit='true'>
       [
         {"ID":1,"NAME":"Linktype","LEGAL_NAME":"Telephone and Data Systems, Inc.","LOGO_URI":"http://dummyimage.com/349x31.jpg/dddddd/000000","OWNER_ID":988},
         {"ID":2,"NAME":"Eare","LEGAL_NAME":"Zymeworks Inc.","LOGO_URI":null,"OWNER_ID":933},
