--- a/services/cabinet/public/html/templates/input/decision/decisionTree.html
+++ b/services/cabinet/public/html/templates/input/decision/decisionTree.html
@@ -1,4 +1,7 @@
 <div class='{{class}}' tree-id='{{treeId}}'>
   {{payload.html()}}
-  <button class='{{buttonClass}}' disabled tree-id='{{treeId}}'>{{name}}</button>
+  <button class='{{buttonClass}}' tree-id='{{treeId}}'
+        {{formFilled() ? '' : 'disabled'}}>
+    {{name}}
+  </button>
 </div>
