--- a/services/cabinet/public/html/templates/managers/cost/body.html
+++ b/services/cabinet/public/html/templates/managers/cost/body.html
@@ -1,4 +1,9 @@
 <div class='{{instance.cntClass}}' >
+  <div class='global-prop-cnt'>
+    <p repeat='id, prop in instance.requiredProps.global'
+        prop-id=id>
+      prop.name()
+    </p>
+  </div>
   <div id='{{instance.parentId}}'>{{instance.expandList.html()}}</div>
-  <div hidden>hi</div>
 </div>
