--- a/services/cabinet/public/styles/expandable-list.css
+++ b/services/cabinet/public/styles/expandable-list.css
@@ -15,6 +15,11 @@
 
 .expand-item {
   position: relative;
+  margin: 2pt;
+  border-style: solid;
+  border-width: 0 1pt 1pt 1pt;
+  border-color: gray;
+  border-radius: 10pt;
 }
 
 .expandable-list.sidebar {
