cost interface getting there...

--- a/services/cabinet/public/html/templates/input/input.html
+++ b/services/cabinet/public/html/templates/input/input.html
@@ -1,4 +1,4 @@
-<div{{hide ? ' hidden' : ''}}>
+<div class='input-cnt'{{hidden() ? ' hidden' : ''}}>
   <label>{{label}}</label>
   <input class='{{class}}' list='input-list-{{id}}' id='{{id}}'
       placeholder='{{placeholder}}' type='{{type}}' name='{{name}}'
