--- a/services/cabinet/public/html/templates/input/measurement.html
+++ b/services/cabinet/public/html/templates/input/measurement.html
@@ -1,4 +1,4 @@
-<div class='fit'{{hide ? ' hidden' : ''}}>
+<div class='fit input-cnt'{{hidden() ? ' hidden' : ''}}>
   <label>{{label}}</label>
   <input class='measurement-input {{class}}' id='{{id}}' value='{{value() ? value() : ""}}'
       placeholder='{{placeholder}}' type='{{type}}' name='{{name}}'>
