--- a/services/cabinet/public/html/templates/input/select.html
+++ b/services/cabinet/public/html/templates/input/select.html
@@ -1,4 +1,4 @@
-<div{{hide ? ' hidden' : ''}}>
+<div class='input-cnt'{{hidden() ? ' hidden' : ''}}>
   <label>{{label}}</label>
   <select class='{{class}}' id='{{id}}' name='{{name}}' value='{{value()}}'>
     <option:t repeat='item in list' value='{{item}}'
