fixed cost interface - need to split up labor/material/reference costs... about to wreck house

--- a/services/cabinet/public/html/templates/managers/cost/body.html
+++ b/services/cabinet/public/html/templates/managers/cost/body.html
@@ -1,9 +1,3 @@
-<div class='{{instance.cntClass}}' >
-  <div class='global-prop-cnt'>
-    <p repeat='id, prop in instance.requiredProps.global'
-        prop-id=id>
-      prop.name()
-    </p>
-  </div>
-  <div id='{{instance.parentId}}'>{{instance.expandList.html()}}</div>
+<div class='{{instance.CostManager.cntClass}}' >
+  {{instance.CostManager.costTypeHtml(instance.cost, instance)}}
 </div>
